# context-ingest-api

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
api/: run.sh
api/routes/: feedback.py  health.py  ingest.py  query.py
api/server/: errorhandlers.py  middleware.py  request_validation.py  run_api.py
configs/: __init__.py  common.py  db.py  llm.py  rate_limit.py  safety.py
core/actions/: ingest_document.py  ingest_manifest.py  query_document.py  record_feedback.py
core/ingestion/: chunker.py  cleaner.py  fetcher.py  pipeline.py
core/rate_limit/: ip_limiter.py  session_limiter.py
core/safety/: classifier.py  gate.py  heuristics.py
core/schema/: __init__.py  feedback.py  ingest.py  llm_answer.py  query.py  retrieval_result.py
core/services/: embeddings.py  llm.py  openai_client.py  prompts.py  retrieval.py
data/: sources.json
data/knowledge/: test-note.md
db/: __init__.py
db/connections/: context_ingest_db.py
db/migrations/: alembic.ini  env.py  migrate.sh
db/migrations/sql/: 0001.sql  0002.sql
db/migrations/versions/: 0001.py  0002.py
db/models/: __init__.py  base.py  chunks.py  documents.py  feedback.py  query_requests.py  query_responses.py
db/sqlalchemy/: transaction.py
docs/: scaffolding-plan.md
docs/api/: feedback.md  ingest.md  query.md
docs/architecture/: ingestion-pipeline.md  overview.md  retrieval.md  schema.md
docs/batches/: README.md
docs/batches/batch1/: 1-repo-skeleton.md  1.5-oss-hygiene.md
docs/batches/batch2/: 2a-app-skeleton.md  2b-contracts-and-schemas.md  2c-migrations-and-tables.md
docs/batches/batch3/: 3a-ingestion-pipeline.md  3b-query-path.md  3c-feedback.md  3d-ratelimit.md  3e-reembed.md  3f-docs.md  3g-safety-classifier.md  3h-refresh-endpoint.md
docs/guides/: ingestion.md  quickstart.md  self-hosting.md  tuning-retrieval.md
libs/: __init__.py  logger.py
scripts/: ingest_all.py  ingest_one.py  reembed_all.py
skills/context-ingest-api-backend/: SKILL.md
skills/context-ingest-api-backend/agents/: openai.yaml
skills/context-ingest-api-backend/references/: api_rules.md  layering_rules.md  logging_rules.md  migration_rules.md  phase_rules.md  stack_rules.md
skills/context-ingest-rag-pipeline/: SKILL.md
skills/context-ingest-rag-pipeline/agents/: openai.yaml
skills/context-ingest-rag-pipeline/references/: contract_rules.md  guardrail_rules.md  knowledge_base_rules.md  phase_rules.md  prompt_eval_rules.md  route_rules.md
